design navbar and header of web with html and css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,87 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
      <title>Document</title>
 </head>
 <body>
-     
+     <header>
+          <div class="up-header">
+               <div class="icon1">
+                    <a href="#">Lorem ipsum</a>
+               </div>
+               <div class="nav">
+                    <ul>
+                         <li><a href="#">Home</a></li>
+                         <li><a href="#">About</a></li>
+                         <li><a href="#">Services</a></li>
+                         <li><a href="#">Hire Me</a></li>
+                    </ul>
+               </div>
+          </div>
+
+          <div class="main-header">
+               <h1>Lorem ipsum dolor sit amet.</h1>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+               <img src="images/1.png" alt="">
+          </div>
+
+          <div class="black-header">
+               <ul>
+                    <li><a href="#">Dribble</a></li>
+                    <li><a href="#">Linkdin</a></li>
+                    <li><a href="#">Medium</a></li>
+                    <li><a href="#">Behance</a></li>
+               </ul>
+          </div>
+     </header>
+
+     <main>
+
+
+
+
+
+
+
+
+
+
+          <section class="first">
+
+          </section>
+
+
+
+
+
+
+
+
+
+
+
+          
+          <section class="second"></section>
+     </main>
+
+
+
+
+
+
+
+     <footer>
+          <div class="up-footer"></div>
+          <div class="down-footer"></div>
+     </footer>
+
+
+
+
+
+
+
+     <script src="javaScript.js"></script>
 </body>
 </html>
