--- a/index.html
+++ b/index.html
@@ -39,18 +39,12 @@
      </header>
 
      <main>
-
-
-
-
-
-
-
-
-
-
           <section class="first">
-
+               <div class="image"><img src="images/1.png"></div>
+               <div>
+                    <h1> Lorem ipsum dolor sit amet consectetur adipisicing </h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, cupiditate doloribus alias iste reiciendis assumenda reprehenderit.</p>
+               </div>
           </section>
 
 
