--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
      <main>
           <section class="first">
                <div class="image"><img src="images/1.png"></div>
-               <div>
+               <div class="firstMain">
                     <h1> Lorem ipsum dolor sit amet consectetur adipisicing </h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, cupiditate doloribus alias iste reiciendis assumenda reprehenderit.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, cupiditate doloribus alias iste reiciendis assumenda reprehenderit.Excepturi, cupiditate doloribus alias iste reiciendis assumenda reprehenderit.
+                    </p>
                </div>
           </section>
 
