--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
      <title>Document</title>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 <body>
      <header>
@@ -49,18 +51,37 @@
           </section>
           <hr>
 
+          <section class="second">
+               <div class="secondText">
+                    <h1> ipsum, dolor </h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, cupidsit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, modi eligendi voluptatum labore in sunt. Sunt aspernatur adipisci cupiditate amet sit, delectus doloremque architecto expedita quaerat voluptatibus illum deserunt. Odio? </p>
 
+                    <p class="number">249+</p>
+               </div>
+               <div class="menu">
+                    <div class="item">
+                         <i class="bi bi-palette-fill"></i>
+                         <p>
+                         <span>Lorem ipsum dolor sit</span><br>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="item lightItem item2">
+                         <i class="bi bi-pc-display-horizontal"></i>
+                         <p>
+                         <span>Lorem ipsum dolor sit</span><br>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="item item3">
+                         <i class="bi bi-person-walking"></i>
+                         <p>
+                         <span>Lorem ipsum dolor sit</span><br>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
 
+               </div>
 
-
-
-
-
-
-
-
-          
-          <section class="second"></section>
+          </section>
+          <hr>
      </main>
 
 
