--- a/index.html
+++ b/index.html
@@ -78,21 +78,14 @@
                          Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                </div>
-
-               
-
           </section>
           <hr>
      </main>
-
-
-
-
-
-
-
      <footer>
-          <div class="up-footer"></div>
+          <div class="up-footer">
+               <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+               <button type="button">email me</button>
+          </div>
           <div class="down-footer"></div>
      </footer>
 
