the end of base design

--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
                <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                <button type="button">email me</button>
           </div>
-          <div class="down-footer"></div>
+          <div class="down-footer">
+               <ul>
+                    <li>A</li>
+                    <li>B</li>
+                    <li>C</li>
+                    <li>D</li>
+               </ul>
+               <p>Lorem ipsum dolor sit.</p>
+          </div>
      </footer>
 
 
