make it responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="initial-scale=1; maximum-scale=1">
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" type="text/css" media="screen and (max-width: 1200px) and (min-width: 992px" href="style_medium.css">
+     <link rel="stylesheet" type="text/css" media="screen and (max-width: 991px)" href="small.css">
      <title>Document</title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -96,12 +99,6 @@
                <p>Lorem ipsum dolor sit.</p>
           </div>
      </footer>
-
-
-
-
-
-
 
      <script src="javaScript.js"></script>
 </body>
